# students-management

./: .gitignore  CMakeLists.txt  README.md
include/: StudentsStore.hpp  app.h  console.hpp  crud.hpp  csv.hpp  menu.hpp  regex.hpp  strings.hpp  student.hpp
src/: app.cpp  main.cpp
src/libs/: console.cpp  csv.cpp  menu.cpp  regex.cpp  strings.cpp
src/logic/: crud.cpp  menu.cpp
src/models/: student.cpp
src/store/: StudentsStore.cpp
